syntax = "proto3";



package lambda;

option go_package = "./;proto";

service Lambda {

    rpc GetIntData (TableOption) returns (IntRows) {}
    rpc GetStringData (TableOption) returns (StringRows) {}
}

message TableOption {
    string table = 1;
    string key = 2;
    string field = 3;
    repeated int32 values = 4;
}

message IntRows {
    repeated IntRow rows = 1;
}

message IntRow {
    int32 key = 1;
    int32 value = 2;
}

message StringRows {
    repeated StringRow rows = 1;
}

message StringRow {
    int32 key = 1;
    string value = 2;
}
